add leftbar in NCKU

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,32 +4,47 @@
 
 @layer base {
   h1 {
-    @apply md:text-[56px] text-[40px] leading-[1.2];
+    @apply md:text-[56px] text-[40px] leading-[1.2] font-semibold;
   }
 
   h2 {
-    @apply md:text-[48px] text-[32px] leading-[1.2];
+    @apply md:text-[48px] text-[32px] leading-[1.2] font-semibold;
   }
 
   h3 {
-    @apply md:text-[40px] text-[24px] leading-[1.2];
+    @apply md:text-[40px] text-[24px] leading-[1.2] font-semibold;
   }
 
   h4 {
-    @apply md:text-[32px] text-[20px] leading-[1.2];
+    @apply md:text-[32px] text-[20px] leading-[1.2] font-semibold;
   }
 
   h5 {
-    @apply md:text-[24px] text-[18px] leading-[1.2];
+    @apply md:text-[24px] text-[18px] leading-[1.2] font-semibold;
   }
 
   h6 {
-    @apply md:text-[20px] text-[16px] md:leading-[1.2] leading-[1.4];
+    @apply md:text-[20px] text-[16px] md:leading-[1.2] leading-[1.4] font-normal;
+  }
+  .h7 {
+    @apply md:text-[16px] text-[16px] md:leading-[1.4] leading-[1.4] font-normal;
+  }
+  .h8 {
+    @apply md:text-[12px] text-[12px] md:leading-[1.4] leading-[1.4] font-normal;
   }
 }
 
 @layer components {
-  .tab-active {
-    @apply;
+  .btn-default {
+    @apply bg-[#262E49] text-white hover:bg-[#525982] active:bg-[#171C2C] disabled:bg-[#CCC] disabled:cursor-not-allowed disabled:text-[#737373];
+  }
+  .tab-default {
+    @apply text-[#BFBFBF] text-[16px] md:text-[20px] font-normal leading-[1.2] hover:text-[#262E49] hover:border-b-4 border-[#BFBFBF] hover:font-bold p-s cursor-pointer;
+  }
+  .tab-click {
+    @apply border-black border-b-4 text-black font-bold;
+  }
+  .dropdown-default {
+    @apply bg-white h-[40px] flex items-center hover:border-[#BFBFBF]  justify-between w-[156px] py-xxs px-s rounded-lg border relative hover:cursor-pointer;
   }
 }
