--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,45 +4,48 @@
 
 @layer base {
   h1 {
-    @apply md:text-[56px] text-[40px] leading-[1.2] font-semibold;
+    @apply md:text-[56px] text-[40px] font-semibold leading-[1.2];
   }
 
   h2 {
-    @apply md:text-[48px] text-[32px] leading-[1.2] font-semibold;
+    @apply md:text-[48px] text-[32px] font-semibold leading-[1.2];
   }
 
   h3 {
-    @apply md:text-[40px] text-[24px] leading-[1.2] font-semibold;
+    @apply md:text-[40px] text-[24px] font-semibold leading-[1.2];
   }
 
   h4 {
-    @apply md:text-[32px] text-[20px] leading-[1.2] font-semibold;
+    @apply md:text-[32px] text-[20px] font-semibold leading-[1.2];
   }
 
   h5 {
-    @apply md:text-[24px] text-[18px] leading-[1.2] font-semibold;
+    @apply md:text-[24px] text-[18px] font-semibold leading-[1.2];
   }
 
   h6 {
-    @apply md:text-[20px] text-[16px] md:leading-[1.2] leading-[1.4] font-normal;
+    @apply md:text-[20px] md:leading-[1.2] text-[16px] font-normal leading-[1.4];
   }
   .h7 {
-    @apply md:text-[16px] text-[16px] md:leading-[1.4] leading-[1.4] font-normal;
+    @apply md:text-[16px] md:leading-[1.4] text-[16px] font-normal leading-[1.4];
   }
   .h8 {
-    @apply md:text-[12px] text-[12px] md:leading-[1.4] leading-[1.4] font-normal;
+    @apply md:text-[12px] md:leading-[1.4] text-[12px] font-normal leading-[1.4];
+  }
+
+  .svg-rwd {
+    @apply h-[60%] w-[60%] sm:h-full sm:w-full;
   }
 }
 
-
 @layer components {
   .btn-default {
-    @apply bg-[#262E49] text-white hover:bg-[#525982] active:bg-[#171C2C] disabled:cursor-not-allowed disabled:bg-[#CCC] disabled:text-[#737373];
+    @apply bg-[#262E49] text-white hover:bg-[#525982] active:bg-[#171C2C]  disabled:cursor-not-allowed disabled:bg-[#CCC] disabled:text-[#737373];
   }
   .tab-default {
-    @apply md:text-[20px] cursor-pointer border-[#BFBFBF] text-[16px] font-normal leading-[1.2] text-[#BFBFBF] hover:border-b-4 hover:font-bold hover:text-[#262E49] py-s sm:p-s;
+    @apply md:text-[20px] cursor-pointer border-[#BFBFBF] py-s text-[16px] font-normal leading-[1.2] text-[#BFBFBF] hover:border-b-4 hover:font-bold hover:text-[#262E49] sm:p-s;
   }
-  .tab-click { 
+  .tab-click {
     @apply border-b-4 border-black font-bold text-black;
   }
   .dropdown-default {
